Fix header spacing mobile

--- a/styles/blog.css
+++ b/styles/blog.css
@@ -24,5 +24,5 @@ h5 {
 /* Content positioning  */
 
 .content {
-   padding: 0.8em 4em 3.8em 4em;
+   padding: 0.8em 2em 3.8em 2em;
 }
