--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -57,7 +57,7 @@ header {
    display: flex;
    justify-content: flex-end;
    align-items: center;
-   padding: 0 100px 0 0;
+   padding: 0 3em 0 0.5em;
    width: 100%;
 }
 
